refactor(api-error): standardize error responses using ApiResponse